syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/iliadmitriev/go-user-test/internal/server/grpc/user/v1;user_proto";

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetByLogin(GetByLoginRequest) returns (GetUserResponse);
}

message CreateRequest {
  string login = 1;
  string password = 2;
  string name = 3;
}

message CreateResponse {
  int32 code = 1;
  string message = 2;
}

message GetUserResponse {
  bytes id = 1;
  string login = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message GetByLoginRequest {
  string login = 1;
}
